@@ -1,43 +1,24 @@
-# Rich Text Area Demo
+# Rich Text Area Demos
 
-This application demonstrates capabilities of the RichTextArea control.
-
-RichTextArea control: [RichTextArea.java](https://github.com/andy-goryachev-oracle/jfx/blob/ag.rich.text.area/modules/javafx.controls/src/main/java/javafx/scene/control/rich/RichTextArea.java)
-
-Demonstration Application:
-[RichTextAreaDemoApp.java](https://github.com/andy-goryachev-oracle/jfx/blob/ag.rich.text.area/tests/manual/rich/src/com/oracle/tools/demo/rich/RichTextAreaDemoApp.java)
+This project contains a number of applications that use the new RichTextArea and CodeArea controls,
+for the purposes of demonstration of capabilities as well as testing.
 
 
-## Prerequisites
+## RichEditorDemoApp
 
-JavaFX SDK is required to build the demo.  You can use a JavaFX SDK that you build or you can download the JavaFX SDK.
-The latest SDK can be found here:
-
-https://jdk.java.net/javafx21/
+[RichEditorDemoApp.java](src/com/oracle/tools/demo/editor/RichEditorDemoApp.java)
+is an example of a simple standalone rich text editor that uses the new RichTextArea control.
 
 
-## Build
 
-The tool uses `ant` to build a non-modular JAR.  You'll need to specify the path to JavaFX SDK 21+
-(using absolute path, the script apparently does not understand ~ symbols):
-```
-ant -Djavafx.home=<JAVAFX>
-```
+## RichTextAreaDemoApp
+
+[RichTextAreaDemoApp.java](src/com/oracle/tools/demo/rich/RichTextAreaDemoApp.java)
+provides a demo application primarily for testing of the RichTextArea behavior.
 
 
-## Run
 
-The demo requires JDK 17+ and JavaFX 21+.
+## CodeAreaDemoApp
 
-To launch, specify the path to the JavaFX SDK lib/ folder on the command line, example:
-
-```
-java -p <JAVAFX>/javafx-sdk-21/lib/ --add-modules ALL-MODULE-PATH -jar RichTextArea.jar
-```
-
-
-## User Preferences
-
-Applications stores the user preferences (window position, currently selected page, etc.) in `~/.RichTextAreaDemo` directory.
-
-
+[CodeAreaDemoApp.java](src/com/oracle/tools/demo/codearea/CodeAreaDemoApp.java)
+provides a demo application primarily for testing of the CodeArea behavior.
